feat: add default markdown

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@milkdown/react": "^7.2.4",
     "@milkdown/theme-nord": "^7.2.4",
     "@milkdown/transformer": "^7.2.4",
+    "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
