--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
