--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modern-drawer": "^1.2.2",
     "tailwindcss": "^3.3.3",
     "valtio": "^1.11.2"
   },
